fhir_path/src/parser/generated/FHIRPathParser.dart
// Generated from FHIRPath.g4 by ANTLR 4.9
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';
import 'dart:io';

import 'FHIRPathListener.dart';
import 'FHIRPathBaseListener.dart';
const int RULE_entireExpression = 0, RULE_expression = 1, RULE_term = 2, 
          RULE_literal = 3, RULE_externalConstant = 4, RULE_invocation = 5, 
          RULE_functn = 6, RULE_paramList = 7, RULE_quantity = 8, RULE_unit = 9, 
          RULE_dateTimePrecision = 10, RULE_pluralDateTimePrecision = 11, 
          RULE_typeSpecifier = 12, RULE_qualifiedIdentifier = 13, RULE_identifier = 14;
class FHIRPathParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.9', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_T__0 = 1, TOKEN_T__1 = 2, TOKEN_T__2 = 3, TOKEN_T__3 = 4, 
                   TOKEN_T__4 = 5, TOKEN_T__5 = 6, TOKEN_T__6 = 7, TOKEN_T__7 = 8, 
                   TOKEN_T__8 = 9, TOKEN_T__9 = 10, TOKEN_T__10 = 11, TOKEN_T__11 = 12, 
                   TOKEN_T__12 = 13, TOKEN_T__13 = 14, TOKEN_T__14 = 15, 
                   TOKEN_T__15 = 16, TOKEN_T__16 = 17, TOKEN_T__17 = 18, 
                   TOKEN_T__18 = 19, TOKEN_T__19 = 20, TOKEN_T__20 = 21, 
                   TOKEN_T__21 = 22, TOKEN_T__22 = 23, TOKEN_T__23 = 24, 
                   TOKEN_T__24 = 25, TOKEN_T__25 = 26, TOKEN_T__26 = 27, 
                   TOKEN_T__27 = 28, TOKEN_T__28 = 29, TOKEN_T__29 = 30, 
                   TOKEN_T__30 = 31, TOKEN_T__31 = 32, TOKEN_T__32 = 33, 
                   TOKEN_T__33 = 34, TOKEN_T__34 = 35, TOKEN_T__35 = 36, 
                   TOKEN_T__36 = 37, TOKEN_T__37 = 38, TOKEN_T__38 = 39, 
                   TOKEN_T__39 = 40, TOKEN_T__40 = 41, TOKEN_T__41 = 42, 
                   TOKEN_T__42 = 43, TOKEN_T__43 = 44, TOKEN_T__44 = 45, 
                   TOKEN_T__45 = 46, TOKEN_T__46 = 47, TOKEN_T__47 = 48, 
                   TOKEN_T__48 = 49, TOKEN_T__49 = 50, TOKEN_T__50 = 51, 
                   TOKEN_T__51 = 52, TOKEN_T__52 = 53, TOKEN_T__53 = 54, 
                   TOKEN_DATETIME = 55, TOKEN_TIME = 56, TOKEN_IDENTIFIER = 57, 
                   TOKEN_DELIMITEDIDENTIFIER = 58, TOKEN_STRING = 59, TOKEN_NUMBER = 60, 
                   TOKEN_WS = 61, TOKEN_COMMENT = 62, TOKEN_LINE_COMMENT = 63;

  @override
  final List<String> ruleNames = [
    'entireExpression', 'expression', 'term', 'literal', 'externalConstant', 
    'invocation', 'functn', 'paramList', 'quantity', 'unit', 'dateTimePrecision', 
    'pluralDateTimePrecision', 'typeSpecifier', 'qualifiedIdentifier', 'identifier'
  ];

  static final List<String> _LITERAL_NAMES = [
       "'.'", "'['", "']'", "'+'", "'-'", "'*'", "'/'", "'div'", "'mod'", 
      "'&'", "'|'", "'<='", "'<'", "'>'", "'>='", "'is'", "'as'", "'='", 
      "'~'", "'!='", "'!~'", "'in'", "'contains'", "'and'", "'or'", "'xor'", 
      "'implies'", "'('", "')'", "'{'", "'}'", "'true'", "'false'", "'%'", 
      "'\$this'", "'\$index'", "'\$total'", "','", "'year'", "'month'", 
      "'week'", "'day'", "'hour'", "'minute'", "'second'", "'millisecond'", 
      "'years'", "'months'", "'weeks'", "'days'", "'hours'", "'minutes'", 
      "'seconds'", "'milliseconds'"
  ];
  static final List<String> _SYMBOLIC_NAMES = [
                 
                 
                 
                 
                 
      "DATETIME", "TIME", "IDENTIFIER", "DELIMITEDIDENTIFIER", "STRING", 
      "NUMBER", "WS", "COMMENT", "LINE_COMMENT"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'FHIRPath.g4';

  @override
  String get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  FHIRPathParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  EntireExpressionContext entireExpression() {
    dynamic _localctx = EntireExpressionContext(context, state);
    enterRule(_localctx, 0, RULE_entireExpression);
    try {
      enterOuterAlt(_localctx, 1);
      state = 30;
      expression(0);
      state = 31;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ExpressionContext expression([int _p = 0]) {
    final _parentctx = context;
    final _parentState = state;
    dynamic _localctx = ExpressionContext(context, _parentState);
    var _prevctx = _localctx;
    var _startState = 2;
    enterRecursionRule(_localctx, 2, RULE_expression, _p);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 37;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)) {
      case TOKEN_T__15:
      case TOKEN_T__16:
      case TOKEN_T__21:
      case TOKEN_T__22:
      case TOKEN_T__27:
      case TOKEN_T__29:
      case TOKEN_T__31:
      case TOKEN_T__32:
      case TOKEN_T__33:
      case TOKEN_T__34:
      case TOKEN_T__35:
      case TOKEN_T__36:
      case TOKEN_DATETIME:
      case TOKEN_TIME:
      case TOKEN_IDENTIFIER:
      case TOKEN_DELIMITEDIDENTIFIER:
      case TOKEN_STRING:
      case TOKEN_NUMBER:
        _localctx = TermExpressionContext(_localctx);
        context = _localctx;
        _prevctx = _localctx;

        state = 34;
        term();
        break;
      case TOKEN_T__3:
      case TOKEN_T__4:
        _localctx = PolarityExpressionContext(_localctx);
        context = _localctx;
        _prevctx = _localctx;
        state = 35;
        _la = tokenStream.LA(1);
        if (!(_la == TOKEN_T__3 || _la == TOKEN_T__4)) {
        errorHandler.recoverInline(this);
        } else {
          if ( tokenStream.LA(1)==IntStream.EOF ) matchedEOF = true;
          errorHandler.reportMatch(this);
          consume();
        }
        state = 36;
        expression(11);
        break;
      default:
        throw NoViableAltException(this);
      }
      context.stop = tokenStream.LT(-1);
      state = 79;
      errorHandler.sync(this);
      _alt = interpreter.adaptivePredict(tokenStream, 2, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          if (parseListeners != null) triggerExitRuleEvent();
          _prevctx = _localctx;
          state = 77;
          errorHandler.sync(this);
          switch (interpreter.adaptivePredict(tokenStream, 1, context)) {
          case 1:
            _localctx = MultiplicativeExpressionContext(new ExpressionContext(_parentctx, _parentState));
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 39;
            if (!(precpred(context, 10))) {
              throw FailedPredicateException(this, "precpred(context, 10)");
            }
            state = 40;
            _la = tokenStream.LA(1);
            if (!((((_la) & ~0x3f) == 0 && ((BigInt.one << _la) & ((BigInt.one << TOKEN_T__5) | (BigInt.one << TOKEN_T__6) | (BigInt.one << TOKEN_T__7) | (BigInt.one << TOKEN_T__8))) != BigInt.zero))) {
            errorHandler.recoverInline(this);
            } else {
              if ( tokenStream.LA(1)==IntStream.EOF ) matchedEOF = true;
              errorHandler.reportMatch(this);
              consume();
            }
            state = 41;
            expression(11);
            break;
          case 2:
            _localctx = AdditiveExpressionContext(new ExpressionContext(_parentctx, _parentState));
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 42;
            if (!(precpred(context, 9))) {
              throw FailedPredicateException(this, "precpred(context, 9)");
            }
            state = 43;
            _la = tokenStream.LA(1);
            if (!((((_la) & ~0x3f) == 0 && ((BigInt.one << _la) & ((BigInt.one << TOKEN_T__3) | (BigInt.one << TOKEN_T__4) | (BigInt.one << TOKEN_T__9))) != BigInt.zero))) {
            errorHandler.recoverInline(this);
            } else {
              if ( tokenStream.LA(1)==IntStream.EOF ) matchedEOF = true;
              errorHandler.reportMatch(this);
              consume();
            }
            state = 44;
            expression(10);
            break;
          case 3:
            _localctx = UnionExpressionContext(new ExpressionContext(_parentctx, _parentState));
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 45;
            if (!(precpred(context, 8))) {
              throw FailedPredicateException(this, "precpred(context, 8)");
            }
            state = 46;
            match(TOKEN_T__10);
            state = 47;
            expression(9);
            break;
          case 4:
            _localctx = InequalityExpressionContext(new ExpressionContext(_parentctx, _parentState));
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 48;
            if (!(precpred(context, 7))) {
              throw FailedPredicateException(this, "precpred(context, 7)");
            }
            state = 49;
            _la = tokenStream.LA(1);
            if (!((((_la) & ~0x3f) == 0 && ((BigInt.one << _la) & ((BigInt.one << TOKEN_T__11) | (BigInt.one << TOKEN_T__12) | (BigInt.one << TOKEN_T__13) | (BigInt.one << TOKEN_T__14))) != BigInt.zero))) {
            errorHandler.recoverInline(this);
            } else {
              if ( tokenStream.LA(1)==IntStream.EOF ) matchedEOF = true;
              errorHandler.reportMatch(this);
              consume();
            }
            state = 50;
            expression(8);
            break;
          case 5:
            _localctx = EqualityExpressionContext(new ExpressionContext(_parentctx, _parentState));
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 51;
            if (!(precpred(context, 5))) {
              throw FailedPredicateException(this, "precpred(context, 5)");
            }
            state = 52;
            _la = tokenStream.LA(1);
            if (!((((_la) & ~0x3f) == 0 && ((BigInt.one << _la) & ((BigInt.one << TOKEN_T__17) | (BigInt.one << TOKEN_T__18) | (BigInt.one << TOKEN_T__19) | (BigInt.one << TOKEN_T__20))) != BigInt.zero))) {
            errorHandler.recoverInline(this);
            } else {
              if ( tokenStream.LA(1)==IntStream.EOF ) matchedEOF = true;
              errorHandler.reportMatch(this);
              consume();
            }
            state = 53;
            expression(6);
            break;
          case 6:
            _localctx = MembershipExpressionContext(new ExpressionContext(_parentctx, _parentState));
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 54;
            if (!(precpred(context, 4))) {
              throw FailedPredicateException(this, "precpred(context, 4)");
            }
            state = 55;
            _la = tokenStream.LA(1);
            if (!(_la == TOKEN_T__21 || _la == TOKEN_T__22)) {
            errorHandler.recoverInline(this);
            } else {
              if ( tokenStream.LA(1)==IntStream.EOF ) matchedEOF = true;
              errorHandler.reportMatch(this);
              consume();
            }
            state = 56;
            expression(5);
            break;
          case 7:
            _localctx = AndExpressionContext(new ExpressionContext(_parentctx, _parentState));
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 57;
            if (!(precpred(context, 3))) {
              throw FailedPredicateException(this, "precpred(context, 3)");
            }
            state = 58;
            match(TOKEN_T__23);
            state = 59;
            expression(4);
            break;
          case 8:
            _localctx = OrExpressionContext(new ExpressionContext(_parentctx, _parentState));
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 60;
            if (!(precpred(context, 2))) {
              throw FailedPredicateException(this, "precpred(context, 2)");
            }
            state = 61;
            _la = tokenStream.LA(1);
            if (!(_la == TOKEN_T__24 || _la == TOKEN_T__25)) {
            errorHandler.recoverInline(this);
            } else {
              if ( tokenStream.LA(1)==IntStream.EOF ) matchedEOF = true;
              errorHandler.reportMatch(this);
              consume();
            }
            state = 62;
            expression(3);
            break;
          case 9:
            _localctx = ImpliesExpressionContext(new ExpressionContext(_parentctx, _parentState));
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 63;
            if (!(precpred(context, 1))) {
              throw FailedPredicateException(this, "precpred(context, 1)");
            }
            state = 64;
            match(TOKEN_T__26);
            state = 65;
            expression(2);
            break;
          case 10:
            _localctx = InvocationExpressionContext(new ExpressionContext(_parentctx, _parentState));
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 66;
            if (!(precpred(context, 13))) {
              throw FailedPredicateException(this, "precpred(context, 13)");
            }
            state = 67;
            match(TOKEN_T__0);
            state = 68;
            invocation();
            break;
          case 11:
            _localctx = IndexerExpressionContext(new ExpressionContext(_parentctx, _parentState));
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 69;
            if (!(precpred(context, 12))) {
              throw FailedPredicateException(this, "precpred(context, 12)");
            }
            state = 70;
            match(TOKEN_T__1);
            state = 71;
            expression(0);
            state = 72;
            match(TOKEN_T__2);
            break;
          case 12:
            _localctx = TypeExpressionContext(new ExpressionContext(_parentctx, _parentState));
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 74;
            if (!(precpred(context, 6))) {
              throw FailedPredicateException(this, "precpred(context, 6)");
            }
            state = 75;
            _la = tokenStream.LA(1);
            if (!(_la == TOKEN_T__15 || _la == TOKEN_T__16)) {
            errorHandler.recoverInline(this);
            } else {
              if ( tokenStream.LA(1)==IntStream.EOF ) matchedEOF = true;
              errorHandler.reportMatch(this);
              consume();
            }
            state = 76;
            typeSpecifier();
            break;
          } 
        }
        state = 81;
        errorHandler.sync(this);
        _alt = interpreter.adaptivePredict(tokenStream, 2, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      unrollRecursionContexts(_parentctx);
    }
    return _localctx;
  }

  TermContext term() {
    dynamic _localctx = TermContext(context, state);
    enterRule(_localctx, 4, RULE_term);
    try {
      state = 89;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)) {
      case TOKEN_T__15:
      case TOKEN_T__16:
      case TOKEN_T__21:
      case TOKEN_T__22:
      case TOKEN_T__34:
      case TOKEN_T__35:
      case TOKEN_T__36:
      case TOKEN_IDENTIFIER:
      case TOKEN_DELIMITEDIDENTIFIER:
        _localctx = InvocationTermContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 82;
        invocation();
        break;
      case TOKEN_T__29:
      case TOKEN_T__31:
      case TOKEN_T__32:
      case TOKEN_DATETIME:
      case TOKEN_TIME:
      case TOKEN_STRING:
      case TOKEN_NUMBER:
        _localctx = LiteralTermContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 83;
        literal();
        break;
      case TOKEN_T__33:
        _localctx = ExternalConstantTermContext(_localctx);
        enterOuterAlt(_localctx, 3);
        state = 84;
        externalConstant();
        break;
      case TOKEN_T__27:
        _localctx = ParenthesizedTermContext(_localctx);
        enterOuterAlt(_localctx, 4);
        state = 85;
        match(TOKEN_T__27);
        state = 86;
        expression(0);
        state = 87;
        match(TOKEN_T__28);
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  LiteralContext literal() {
    dynamic _localctx = LiteralContext(context, state);
    enterRule(_localctx, 6, RULE_literal);
    int _la;
    try {
      state = 99;
      errorHandler.sync(this);
      switch (interpreter.adaptivePredict(tokenStream, 4, context)) {
      case 1:
        _localctx = NullLiteralContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 91;
        match(TOKEN_T__29);
        state = 92;
        match(TOKEN_T__30);
        break;
      case 2:
        _localctx = BooleanLiteralContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 93;
        _la = tokenStream.LA(1);
        if (!(_la == TOKEN_T__31 || _la == TOKEN_T__32)) {
        errorHandler.recoverInline(this);
        } else {
          if ( tokenStream.LA(1)==IntStream.EOF ) matchedEOF = true;
          errorHandler.reportMatch(this);
          consume();
        }
        break;
      case 3:
        _localctx = StringLiteralContext(_localctx);
        enterOuterAlt(_localctx, 3);
        state = 94;
        match(TOKEN_STRING);
        break;
      case 4:
        _localctx = NumberLiteralContext(_localctx);
        enterOuterAlt(_localctx, 4);
        state = 95;
        match(TOKEN_NUMBER);
        break;
      case 5:
        _localctx = DateTimeLiteralContext(_localctx);
        enterOuterAlt(_localctx, 5);
        state = 96;
        match(TOKEN_DATETIME);
        break;
      case 6:
        _localctx = TimeLiteralContext(_localctx);
        enterOuterAlt(_localctx, 6);
        state = 97;
        match(TOKEN_TIME);
        break;
      case 7:
        _localctx = QuantityLiteralContext(_localctx);
        enterOuterAlt(_localctx, 7);
        state = 98;
        quantity();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ExternalConstantContext externalConstant() {
    dynamic _localctx = ExternalConstantContext(context, state);
    enterRule(_localctx, 8, RULE_externalConstant);
    try {
      enterOuterAlt(_localctx, 1);
      state = 101;
      match(TOKEN_T__33);
      state = 104;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)) {
      case TOKEN_T__15:
      case TOKEN_T__16:
      case TOKEN_T__21:
      case TOKEN_T__22:
      case TOKEN_IDENTIFIER:
      case TOKEN_DELIMITEDIDENTIFIER:
        state = 102;
        identifier();
        break;
      case TOKEN_STRING:
        state = 103;
        match(TOKEN_STRING);
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  InvocationContext invocation() {
    dynamic _localctx = InvocationContext(context, state);
    enterRule(_localctx, 10, RULE_invocation);
    try {
      state = 111;
      errorHandler.sync(this);
      switch (interpreter.adaptivePredict(tokenStream, 6, context)) {
      case 1:
        _localctx = MemberInvocationContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 106;
        identifier();
        break;
      case 2:
        _localctx = FunctionInvocationContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 107;
        functn();
        break;
      case 3:
        _localctx = ThisInvocationContext(_localctx);
        enterOuterAlt(_localctx, 3);
        state = 108;
        match(TOKEN_T__34);
        break;
      case 4:
        _localctx = IndexInvocationContext(_localctx);
        enterOuterAlt(_localctx, 4);
        state = 109;
        match(TOKEN_T__35);
        break;
      case 5:
        _localctx = TotalInvocationContext(_localctx);
        enterOuterAlt(_localctx, 5);
        state = 110;
        match(TOKEN_T__36);
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  FunctnContext functn() {
    dynamic _localctx = FunctnContext(context, state);
    enterRule(_localctx, 12, RULE_functn);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 113;
      identifier();
      state = 114;
      match(TOKEN_T__27);
      state = 116;
      errorHandler.sync(this);
      _la = tokenStream.LA(1);
      if ((((_la) & ~0x3f) == 0 && ((BigInt.one << _la) & ((BigInt.one << TOKEN_T__3) | (BigInt.one << TOKEN_T__4) | (BigInt.one << TOKEN_T__15) | (BigInt.one << TOKEN_T__16) | (BigInt.one << TOKEN_T__21) | (BigInt.one << TOKEN_T__22) | (BigInt.one << TOKEN_T__27) | (BigInt.one << TOKEN_T__29) | (BigInt.one << TOKEN_T__31) | (BigInt.one << TOKEN_T__32) | (BigInt.one << TOKEN_T__33) | (BigInt.one << TOKEN_T__34) | (BigInt.one << TOKEN_T__35) | (BigInt.one << TOKEN_T__36) | (BigInt.one << TOKEN_DATETIME) | (BigInt.one << TOKEN_TIME) | (BigInt.one << TOKEN_IDENTIFIER) | (BigInt.one << TOKEN_DELIMITEDIDENTIFIER) | (BigInt.one << TOKEN_STRING) | (BigInt.one << TOKEN_NUMBER))) != BigInt.zero)) {
        state = 115;
        paramList();
      }

      state = 118;
      match(TOKEN_T__28);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
